[gd_scene load_steps=5 format=3 uid="uid://5suj1oy8mnow"]

[ext_resource type="Texture2D" uid="uid://mh72ai46kykj" path="res://assets/img/object/wheel.png" id="1_le0pg"]
[ext_resource type="Script" path="res://project/popup/wheel/wheel.gd" id="1_lqdp8"]
[ext_resource type="Texture2D" uid="uid://ccmj7d3eiepw" path="res://assets/img/object/wheel_pointer.png" id="2_3simw"]
[ext_resource type="Theme" uid="uid://cyryjcs8wh6fi" path="res://project/popup/popup.tres" id="3_ltl5q"]

[node name="WheelPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2
script = ExtResource("1_lqdp8")

[node name="ColorRect" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -650.0
offset_top = -641.0
offset_right = 650.0
offset_bottom = 877.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_ltl5q")

[node name="SpriteList" type="Node2D" parent="."]
position = Vector2(720, 1280)

[node name="Content" type="Node2D" parent="SpriteList"]

[node name="Wheel" type="Sprite2D" parent="SpriteList/Content"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_le0pg")

[node name="1" type="Label" parent="SpriteList/Content"]
offset_left = -22.0
offset_top = -462.0
offset_right = 34.0
offset_bottom = -327.0
theme = ExtResource("3_ltl5q")
text = "1"

[node name="2" type="Label" parent="SpriteList/Content"]
offset_left = 204.0
offset_top = -421.0
offset_right = 271.0
offset_bottom = -286.0
rotation = 0.523598
theme = ExtResource("3_ltl5q")
text = "2"

[node name="3" type="Label" parent="SpriteList/Content"]
offset_left = 390.0
offset_top = -246.0
offset_right = 446.0
offset_bottom = -111.0
rotation = 1.0472
theme = ExtResource("3_ltl5q")
text = "3"

[node name="4" type="Label" parent="SpriteList/Content"]
offset_left = 462.0
offset_top = -30.0
offset_right = 529.0
offset_bottom = 105.0
rotation = 1.57079
theme = ExtResource("3_ltl5q")
text = "4"

[node name="5" type="Label" parent="SpriteList/Content"]
offset_left = 407.0
offset_top = 202.0
offset_right = 463.0
offset_bottom = 337.0
rotation = 2.18166
theme = ExtResource("3_ltl5q")
text = "5"

[node name="6" type="Label" parent="SpriteList/Content"]
offset_left = 251.0
offset_top = 360.0
offset_right = 318.0
offset_bottom = 495.0
rotation = 2.61799
theme = ExtResource("3_ltl5q")
text = "6"

[node name="7" type="Label" parent="SpriteList/Content"]
offset_left = 40.0
offset_top = 435.0
offset_right = 107.0
offset_bottom = 570.0
rotation = 3.1765
theme = ExtResource("3_ltl5q")
text = "7"

[node name="8" type="Label" parent="SpriteList/Content"]
offset_left = -189.0
offset_top = 398.0
offset_right = -122.0
offset_bottom = 533.0
rotation = 3.66519
theme = ExtResource("3_ltl5q")
text = "8"

[node name="9" type="Label" parent="SpriteList/Content"]
offset_left = -356.0
offset_top = 254.0
offset_right = -300.0
offset_bottom = 389.0
rotation = -2.16421
theme = ExtResource("3_ltl5q")
text = "9"

[node name="10" type="Label" parent="SpriteList/Content"]
offset_left = -452.0
offset_top = 68.0
offset_right = -329.0
offset_bottom = 203.0
rotation = -1.65806
theme = ExtResource("3_ltl5q")
text = "10"

[node name="11" type="Label" parent="SpriteList/Content"]
offset_left = -424.0
offset_top = -193.0
offset_right = -312.0
offset_bottom = -58.0
rotation = -1.0472
theme = ExtResource("3_ltl5q")
text = "11"

[node name="12" type="Label" parent="SpriteList/Content"]
offset_left = -279.0
offset_top = -369.0
offset_right = -156.0
offset_bottom = -234.0
rotation = -0.523598
theme = ExtResource("3_ltl5q")
text = "12"

[node name="Pointer" type="Sprite2D" parent="SpriteList"]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_3simw")

[node name="SpinBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 716.0
offset_right = 4.0
offset_bottom = 724.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("3_ltl5q")
text = "Spin"

[node name="CloseBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 548.0
offset_top = -660.0
offset_right = 636.0
offset_bottom = -515.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ltl5q")
text = "X"

[connection signal="pressed" from="SpinBtn" to="." method="_on_spin_btn_pressed"]
[connection signal="pressed" from="CloseBtn" to="." method="_on_close_btn_pressed"]
